--- a/blog-post-1.html
+++ b/blog-post-1.html
@@ -11,7 +11,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Future of AI in B2B Customer Research - Mohammad Jafari's Blog</title>
+    <title>The Future of AI in B2B Customer Research - Mo Jafari's Blog</title>
     <link rel="canonical" href="https://www.mohammad.page/blog-post-1.html">
     <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="styles.css">
