--- a/links.html
+++ b/links.html
@@ -73,43 +73,43 @@
     </noscript>
 
     <main class="content">
-        <h1>Links</h1>
+        <h1>links</h1>
         
-        <p>Here are some places you can find me around the web:</p>
+        <p>here are some places you can find me around the web:</p>
 
         <div class="link-section">
-            <h2>Music</h2>
+            <h2>music</h2>
             <div class="link-item">
-                <a href="spotify.html">Spotify Playlists</a>
-                <span class="link-description">My curated music collections</span>
+                <a href="spotify.html">spotify playlists</a>
+                <span class="link-description">my playlists</span>
             </div>
         </div>
 
         <div class="link-section">
-            <h2>Photography</h2>
+            <h2>photography</h2>
             <div class="link-item">
-                <a href="#" target="_blank" rel="noopener noreferrer">VSCO</a>
-                <span class="link-description">Visual stories and photography</span>
+                <a href="https://www.instagram.com/monotlysa/" target="_blank" rel="noopener noreferrer">instagram</a>
+                <span class="link-description">just for fun</span>
             </div>
         </div>
 
         <div class="link-section">
-            <h2>Professional</h2>
+            <h2>professional</h2>
             <div class="link-item">
-                <a href="https://www.linkedin.com/in/mojafarii/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-                <span class="link-description">Professional network and updates</span>
+                <a href="https://www.linkedin.com/in/mojafarii/" target="_blank" rel="noopener noreferrer">linkedin</a>
+                <span class="link-description">good ol linkedin</span>
             </div>
             <div class="link-item">
-                <a href="https://github.com/mossein" target="_blank" rel="noopener noreferrer">GitHub</a>
-                <span class="link-description">Code repositories and projects</span>
+                <a href="https://github.com/mossein" target="_blank" rel="noopener noreferrer">github</a>
+                <span class="link-description">my code vault</span>
             </div>
         </div>
 
         <div class="link-section">
-            <h2>Other</h2>
+            <h2>socials</h2>
             <div class="link-item">
-                <a href="https://x.com/mojafariii" target="_blank" rel="noopener noreferrer">Twitter</a>
-                <span class="link-description">Thoughts and updates</span>
+                <a href="https://x.com/mojafariii" target="_blank" rel="noopener noreferrer">x/twitter</a>
+                <span class="link-description">my X (twitter)</span>
             </div>
         </div>
     </main>
