--- a/blog-post-2.html
+++ b/blog-post-2.html
@@ -5,8 +5,10 @@
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);} 
-    gtag('js', new Date());
-    gtag('config', 'G-40C7CVW886');
+    window.addEventListener('DOMContentLoaded', function(){
+      gtag('js', new Date());
+      gtag('config', 'G-40C7CVW886');
+    });
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
