--- a/spotify.html
+++ b/spotify.html
@@ -4,10 +4,11 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-40C7CVW886"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-40C7CVW886');
+    function gtag(){dataLayer.push(arguments);} 
+    window.addEventListener('DOMContentLoaded', function(){
+      gtag('js', new Date());
+      gtag('config', 'G-40C7CVW886');
+    });
     </script>
     <link rel="canonical" href="https://www.mohammad.page/spotify.html">
     <link rel="icon" href="/favicon.ico">
