--- a/links.html
+++ b/links.html
@@ -1,119 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-40C7CVW886"></script>
+  <head>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-40C7CVW886"
+    ></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);} 
-    window.addEventListener('DOMContentLoaded', function(){
-      gtag('js', new Date());
-      gtag('config', 'G-40C7CVW886');
-    });
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      window.addEventListener("DOMContentLoaded", function () {
+        gtag("js", new Date());
+        gtag("config", "G-40C7CVW886");
+      });
     </script>
-    <link rel="canonical" href="https://www.mohammad.page/links.html">
-    <link rel="icon" href="/favicon.ico">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://www.googletagmanager.com">
-    <link rel="preconnect" href="https://www.google-analytics.com">
-    <meta property="og:locale" content="en_US">
-    <meta property="og:title" content="Links - Mohammad Jafari">
-    <meta property="og:description" content="Links to Mohammad Jafari's social profiles, playlists, and creative work.">
-    <meta property="og:url" content="https://www.mohammad.page/links.html">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://mohammad.page/portrait.jpeg">
-    <meta property="og:site_name" content="Mohammad Jafari">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Links - Mohammad Jafari">
-    <meta name="twitter:description" content="Links to Mohammad Jafari's social profiles, playlists, and creative work.">
-    <meta name="twitter:image" content="https://mohammad.page/portrait.jpeg">
-    <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
-    <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://www.mohammad.page/links.html" />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://www.googletagmanager.com" />
+    <link rel="preconnect" href="https://www.google-analytics.com" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:title" content="Links - Mohammad Jafari" />
+    <meta
+      property="og:description"
+      content="Links to Mohammad Jafari's social profiles, playlists, and creative work."
+    />
+    <meta property="og:url" content="https://www.mohammad.page/links.html" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://mohammad.page/portrait.jpeg" />
+    <meta property="og:site_name" content="Mohammad Jafari" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Links - Mohammad Jafari" />
+    <meta
+      name="twitter:description"
+      content="Links to Mohammad Jafari's social profiles, playlists, and creative work."
+    />
+    <meta name="twitter:image" content="https://mohammad.page/portrait.jpeg" />
+    <meta
+      name="theme-color"
+      content="#ffffff"
+      media="(prefers-color-scheme: light)"
+    />
+    <meta
+      name="theme-color"
+      content="#000000"
+      media="(prefers-color-scheme: dark)"
+    />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Links - Mohammad Jafari</title>
-    <meta name="description" content="Links to Mohammad Jafari's social profiles, playlists, and creative work.">
+    <meta
+      name="description"
+      content="Links to Mohammad Jafari's social profiles, playlists, and creative work."
+    />
     <style>
-        .content {
-            margin-top: 10vh;
-        }
-        .link-section {
-            margin-bottom: 30px;
-        }
-        .link-item {
-            margin-bottom: 10px;
-            padding: 8px 0;
-            transition: transform 0.2s ease;
-            border-radius: 3px;
-        }
-        .link-item:hover {
-            transform: translateX(3px);
-        }
-        .link-item a {
-            display: inline-block;
-            padding: 5px 0;
-        }
-        .link-description {
-            color: #666;
-            font-size: 0.9em;
-            margin-left: 10px;
-            transition: color 0.2s ease;
-        }
-        .link-item:hover .link-description {
-            color: #555;
-        }
+      .content {
+        margin-top: 10vh;
+      }
+      .link-section {
+        margin-bottom: 30px;
+      }
+      .link-item {
+        margin-bottom: 10px;
+        padding: 8px 0;
+        transition: transform 0.2s ease;
+        border-radius: 3px;
+      }
+      .link-item:hover {
+        transform: translateX(3px);
+      }
+      .link-item a {
+        display: inline-block;
+        padding: 5px 0;
+      }
+      .link-description {
+        color: #666;
+        font-size: 0.9em;
+        margin-left: 10px;
+        transition: color 0.2s ease;
+      }
+      .link-item:hover .link-description {
+        color: #555;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <site-nav></site-nav>
     <noscript>
-        <nav class="nav" aria-label="Primary">
-            <a href="index.html">Home</a>
-            <a href="blog.html">Blog</a>
-            <a href="links.html" aria-current="page">Links</a>
-        </nav>
+      <nav class="nav" aria-label="Primary">
+        <a href="index.html">Home</a>
+        <a href="blog.html">Blog</a>
+        <a href="links.html" aria-current="page">Links</a>
+      </nav>
     </noscript>
 
     <main class="content">
-        <h1>links</h1>
-        
-        <p>here are some places you can find me around the web:</p>
+      <h1>links</h1>
 
-        <div class="link-section">
-            <h2>music</h2>
-            <div class="link-item">
-                <a href="spotify.html">spotify playlists</a>
-                <span class="link-description">my playlists</span>
-            </div>
-        </div>
+      <p>here are some places you can find me around the web:</p>
 
-        <div class="link-section">
-            <h2>photography</h2>
-            <div class="link-item">
-                <a href="https://www.instagram.com/monotlysa/" target="_blank" rel="noopener noreferrer">instagram</a>
-                <span class="link-description">just for fun</span>
-            </div>
+      <div class="link-section">
+        <h2>music</h2>
+        <div class="link-item">
+          <a href="spotify.html">spotify playlists</a>
+          <span class="link-description">my playlists</span>
         </div>
+      </div>
 
-        <div class="link-section">
-            <h2>professional</h2>
-            <div class="link-item">
-                <a href="https://www.linkedin.com/in/mojafarii/" target="_blank" rel="noopener noreferrer">linkedin</a>
-                <span class="link-description">good ol linkedin</span>
-            </div>
-            <div class="link-item">
-                <a href="https://github.com/mossein" target="_blank" rel="noopener noreferrer">github</a>
-                <span class="link-description">my code vault</span>
-            </div>
+      <div class="link-section">
+        <h2>photography</h2>
+        <div class="link-item">
+          <a
+            href="https://www.instagram.com/monotlysa/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >instagram</a
+          >
+          <span class="link-description">just for fun</span>
         </div>
+      </div>
 
-        <div class="link-section">
-            <h2>socials</h2>
-            <div class="link-item">
-                <a href="https://x.com/mojafariii" target="_blank" rel="noopener noreferrer">x/twitter</a>
-                <span class="link-description">my X (twitter)</span>
-            </div>
+      <div class="link-section">
+        <h2>professional</h2>
+        <div class="link-item">
+          <a
+            href="https://www.linkedin.com/in/mojafarii/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >linkedin</a
+          >
+          <span class="link-description">good ol linkedin</span>
         </div>
+        <div class="link-item">
+          <a
+            href="https://github.com/mossein"
+            target="_blank"
+            rel="noopener noreferrer"
+            >github</a
+          >
+          <span class="link-description">my code vault</span>
+        </div>
+      </div>
+
+      <div class="link-section">
+        <h2>socials</h2>
+        <div class="link-item">
+          <a
+            href="https://x.com/mojafariii"
+            target="_blank"
+            rel="noopener noreferrer"
+            >x/twitter</a
+          >
+          <span class="link-description">my X (twitter)</span>
+        </div>
+      </div>
     </main>
     <script src="nav.js" defer></script>
-</body>
-</html> 
+  </body>
+</html>
