update intro text

--- a/index.html
+++ b/index.html
@@ -87,14 +87,13 @@
       <h1>hi, i'm mo.</h1>
 
       <p>
-        software developer with end-to-end experience across architecture,
+        software developer with end to end experience across architecture,
         infrastructure, and applied ai. as a
-        <span class="hl">founding engineer</span> at
+       founding software developer at
         <a href="https://retellio.com">retellio</a>, i built the aws ecosystem,
-        scalable backend systems, and shipped production-grade
-        <span class="hl">genai</span> features. previously, i worked on nasdaq’s
-        <span class="hl">entity research copilot</span> adopted by
-        <span class="hl">2,000+ institutions</span>.
+        scalable backend systems, and shipped production-grade genai features. previously, i worked on nasdaq’s
+        entity research copilot adopted by
+        2,000+ institutions.
       </p>
 
       <img
