--- a/blog-post-1.html
+++ b/blog-post-1.html
@@ -41,7 +41,7 @@
       content="https://www.mohammad.page/blog-post-1.html"
     />
     <meta property="og:type" content="article" />
-    <meta property="og:image" content="https://mohammad.page/portrait.jpeg" />
+    <meta property="og:image" content="https://mohammad.page/og.png" />
     <meta property="og:site_name" content="Mohammad Jafari" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta
@@ -52,7 +52,7 @@
       name="twitter:description"
       content="Reflections on the evolving role of AI in B2B customer research and where it's heading."
     />
-    <meta name="twitter:image" content="https://mohammad.page/portrait.jpeg" />
+    <meta name="twitter:image" content="https://mohammad.page/og.png" />
     <meta
       name="theme-color"
       content="#ffffff"
