--- a/blog-post-2.html
+++ b/blog-post-2.html
@@ -178,7 +178,7 @@
       content="https://www.mohammad.page/blog-post-2.html"
     />
     <meta property="og:type" content="article" />
-    <meta property="og:image" content="https://mohammad.page/portrait.jpeg" />
+    <meta property="og:image" content="https://mohammad.page/og.png" />
     <meta property="og:site_name" content="Mohammad Jafari" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta
@@ -189,7 +189,7 @@
       name="twitter:description"
       content="How Retellio turns long customer calls into short, insight-rich podcasts delivered where teams work; integrating with Salesforce, HubSpot, Gong, and Zoom."
     />
-    <meta name="twitter:image" content="https://mohammad.page/portrait.jpeg" />
+    <meta name="twitter:image" content="https://mohammad.page/og.png" />
     <meta
       name="theme-color"
       content="#ffffff"
