--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
     />
     <meta property="og:url" content="https://www.mohammad.page/blog.html" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://mohammad.page/portrait.jpeg" />
+    <meta property="og:image" content="https://mohammad.page/og.png" />
     <meta property="og:site_name" content="Mohammad Jafari" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Mohammad Jafari's Blog" />
