--- a/links.html
+++ b/links.html
@@ -28,7 +28,7 @@
     />
     <meta property="og:url" content="https://www.mohammad.page/links.html" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://mohammad.page/portrait.jpeg" />
+    <meta property="og:image" content="https://mohammad.page/og.png" />
     <meta property="og:site_name" content="Mohammad Jafari" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Links - Mohammad Jafari" />
@@ -36,7 +36,7 @@
       name="twitter:description"
       content="Links to Mohammad Jafari's social profiles, playlists, and creative work."
     />
-    <meta name="twitter:image" content="https://mohammad.page/portrait.jpeg" />
+    <meta name="twitter:image" content="https://mohammad.page/og.png" />
     <meta
       name="theme-color"
       content="#ffffff"
