update blog dates, add footers to multiple pages, and enhance styles with new font and animations

--- a/blog-post-1.html
+++ b/blog-post-1.html
@@ -132,6 +132,10 @@
           rapidly evolving, and AI is at the forefront of this change.
         </p>
 
+        <blockquote>
+          <p>AI will not only help us understand current customer behavior but also predict future trends and needs.</p>
+        </blockquote>
+
         <h2>The Current State of AI in B2B Research</h2>
         <p>
           Currently, AI is being used in B2B customer research to automate data
@@ -185,6 +189,7 @@
 
       <p><a href="blog.html">← Back to blog</a></p>
     </main>
+    <footer>© 2025 · toronto · ☾</footer>
     <script src="nav.js" defer></script>
   </body>
 </html>
