--- a/links.html
+++ b/links.html
@@ -101,15 +101,15 @@
       <p>here are some places you can find me around the web:</p>
 
       <div class="link-section">
-        <h2>music</h2>
+        <h2>what i listen to while debugging</h2>
         <div class="link-item">
           <a href="spotify.html">spotify playlists</a>
-          <span class="link-description">my playlists</span>
+          <span class="link-description">curated vibes</span>
         </div>
       </div>
 
       <div class="link-section">
-        <h2>photography</h2>
+        <h2>where i pretend to be artistic</h2>
         <div class="link-item">
           <a
             href="https://www.instagram.com/monotlysa/"
@@ -117,12 +117,12 @@
             rel="noopener noreferrer"
             >instagram</a
           >
-          <span class="link-description">just for fun</span>
+          <span class="link-description">mostly film photography</span>
         </div>
       </div>
 
       <div class="link-section">
-        <h2>professional</h2>
+        <h2>proof i'm employable</h2>
         <div class="link-item">
           <a
             href="https://www.linkedin.com/in/mojafarii/"
@@ -130,7 +130,7 @@
             rel="noopener noreferrer"
             >linkedin</a
           >
-          <span class="link-description">good ol linkedin</span>
+          <span class="link-description">the corporate one</span>
         </div>
         <div class="link-item">
           <a
@@ -139,12 +139,12 @@
             rel="noopener noreferrer"
             >github</a
           >
-          <span class="link-description">my code vault</span>
+          <span class="link-description">where the code lives</span>
         </div>
       </div>
 
       <div class="link-section">
-        <h2>socials</h2>
+        <h2>where i yell into the void</h2>
         <div class="link-item">
           <a
             href="https://x.com/mojafariii"
@@ -152,10 +152,11 @@
             rel="noopener noreferrer"
             >x/twitter</a
           >
-          <span class="link-description">my X (twitter)</span>
+          <span class="link-description">occasional thoughts</span>
         </div>
       </div>
     </main>
+    <footer>© 2025 · toronto · ☾</footer>
     <script src="nav.js" defer></script>
   </body>
 </html>
