--- a/404.html
+++ b/404.html
@@ -129,6 +129,7 @@
       </div>
       <p id="egg" class="egg">haha you are a little weirdo.</p>
     </main>
+    <footer>© 2025 · toronto · ☾</footer>
 
     <script src="nav.js" defer></script>
     <script>
