--- a/blog-post-2.html
+++ b/blog-post-2.html
@@ -27,140 +27,6 @@
     <link rel="preconnect" href="https://www.googletagmanager.com" />
     <link rel="preconnect" href="https://www.google-analytics.com" />
     <meta property="og:locale" content="en_US" />
-    <style>
-      * {
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-      }
-      ::selection {
-        background: rgba(0, 102, 204, 0.15);
-        color: #0066cc;
-      }
-      ::-moz-selection {
-        background: rgba(0, 102, 204, 0.15);
-        color: #0066cc;
-      }
-      html {
-        scroll-behavior: smooth;
-      }
-      body {
-        font-family: Georgia, "Times New Roman", Times, serif;
-        line-height: 1.65;
-        color: #2c2c2c;
-        max-width: 800px;
-        margin: 0 auto;
-        padding: 20px;
-      }
-      h1,
-      h2 {
-        font-weight: normal;
-        letter-spacing: -0.02em;
-      }
-      h1 {
-        font-size: 2.5em;
-        margin-bottom: 10px;
-        letter-spacing: -0.03em;
-      }
-      .date {
-        color: #666;
-        font-style: italic;
-        margin-bottom: 20px;
-      }
-      a {
-        color: #0066cc;
-        text-decoration: none;
-        transition: all 0.2s ease;
-        border-bottom: 1px solid transparent;
-      }
-      a:hover {
-        border-bottom: 1px solid #0066cc;
-      }
-      a:focus {
-        outline: 2px solid rgba(0, 102, 204, 0.3);
-        outline-offset: 2px;
-        border-radius: 1px;
-      }
-      .nav {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 12px;
-        margin-bottom: 24px;
-      }
-      .nav a {
-        padding: 6px 10px;
-        border-radius: 6px;
-        transition: background-color 0.2s ease, color 0.2s ease;
-      }
-      .nav a:hover {
-        background-color: rgba(0, 102, 204, 0.06);
-        border-bottom: 1px solid transparent;
-      }
-      .nav a[aria-current="page"] {
-        font-weight: 600;
-        background-color: rgba(0, 102, 204, 0.08);
-        border-bottom: 1px solid transparent;
-      }
-      .content {
-        animation: fadeIn 0.6s ease-out;
-      }
-      @keyframes fadeIn {
-        from {
-          opacity: 0;
-          transform: translateY(10px);
-        }
-        to {
-          opacity: 1;
-          transform: translateY(0);
-        }
-      }
-      .theme-toggle {
-        position: fixed;
-        top: 12px;
-        right: 12px;
-        width: 34px;
-        height: 34px;
-        border: none;
-        border-radius: 999px;
-        background: #fff;
-        color: #222;
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
-        font-size: 16px;
-        line-height: 1;
-        transition: background-color 0.2s ease, color 0.2s ease;
-        z-index: 1000;
-      }
-      .theme-toggle:hover {
-      }
-      .dark body {
-        background: #0b0d10;
-        color: #e6e6e6;
-      }
-      .dark a {
-        color: #66b2ff;
-      }
-      .dark a:hover {
-        border-bottom-color: #66b2ff;
-      }
-      .dark .nav a:hover {
-        background-color: rgba(102, 178, 255, 0.08);
-      }
-      .dark ::selection {
-        background: rgba(102, 178, 255, 0.2);
-        color: #66b2ff;
-      }
-      .dark .theme-toggle {
-        background: #14171a;
-        color: #e6e6e6;
-        border: none;
-      }
-      .dark .nav a[aria-current="page"] {
-        background-color: rgba(102, 178, 255, 0.12);
-      }
-    </style>
     <meta
       name="description"
       content="How Retellio turns long customer calls into short, insight-rich podcasts delivered where teams work; integrating with Salesforce, HubSpot, Gong, and Zoom."
@@ -203,8 +69,15 @@
   </head>
   <body>
     <site-nav></site-nav>
+    <noscript>
+      <nav class="nav" aria-label="Primary">
+        <a href="index.html">Home</a>
+        <a href="blog.html" aria-current="page">Blog</a>
+        <a href="links.html">Links</a>
+      </nav>
+    </noscript>
 
-    <div class="content">
+    <main class="content">
       <article>
         <script type="application/ld+json">
           {
@@ -255,17 +128,21 @@
         <p class="date">August 14, 2025</p>
 
         <p>
-          Product leaders don’t have hours to replay customer calls. At
+          Product leaders don't have hours to replay customer calls. At
           Retellio, we turn long recordings into short, insight-rich podcasts
           that land where teams already work. Think five minutes of the most
           important moments from your week of conversations; delivered with
           links back to the exact quotes.
         </p>
 
+        <blockquote>
+          <p>The signal is in there—objections, unmet jobs, surprise use cases—but it's buried across recordings and scattered notes.</p>
+        </blockquote>
+
         <h2>Why insight podcasts</h2>
         <p>
           Teams get overwhelmed by volume. The signal is in there; objections,
-          unmet jobs, surprise use cases; but it’s buried across Zoom and Gong
+          unmet jobs, surprise use cases; but it's buried across Zoom and Gong
           recordings, and scattered notes. Our goal is simple: surface the
           moments that matter so decisions happen faster.
         </p>
@@ -286,12 +163,12 @@
           </li>
         </ul>
 
-        <h2>What’s under the hood</h2>
+        <h2>What's under the hood</h2>
         <p>
           We segment calls into moments, rank them for relevance, and generate
           structured summaries grounded in the original audio. The pipeline
           emphasizes determinism and evidence over free-form prose, so leaders
-          can trust what they’re hearing.
+          can trust what they're hearing.
         </p>
 
         <h2>Anatomy of an episode</h2>
@@ -300,7 +177,7 @@
           <li>Top moments with timestamps and one-line takeaways.</li>
           <li>Contrarian or outlier segment to avoid echo chambers.</li>
           <li>Risks and unknowns called out explicitly with source links.</li>
-          <li>Actions and owners so follow-ups don’t get lost.</li>
+          <li>Actions and owners so follow-ups don't get lost.</li>
         </ul>
 
         <h2>Ranking what makes a moment matter</h2>
@@ -343,7 +220,7 @@
 
         <h2>Looking ahead</h2>
         <p>
-          We’re exploring role-based voices for podcasts (PM, Sales, CS),
+          We're exploring role-based voices for podcasts (PM, Sales, CS),
           smarter episode playlists by account, topic tracking across customer
           cohorts, and tighter CRM linking so opportunities and insights stay in
           sync. If your team wants to try insight podcasts on your calls, reach
@@ -358,7 +235,8 @@
       </article>
 
       <p><a href="blog.html">← Back to blog</a></p>
-    </div>
+    </main>
+    <footer>© 2025 · toronto · ☾</footer>
     <script src="nav.js" defer></script>
   </body>
 </html>
