--- a/blog.html
+++ b/blog.html
@@ -117,6 +117,7 @@
         <a href="blog-post-1.html">Read more</a>
       </div>
     </main>
+    <footer>© 2025 · toronto · ☾</footer>
     <script src="nav.js" defer></script>
   </body>
 </html>
