add two new blog posts

--- a/blog-post-2.html
+++ b/blog-post-2.html
@@ -136,7 +136,7 @@
         </p>
 
         <blockquote>
-          <p>The signal is in there—objections, unmet jobs, surprise use cases—but it's buried across recordings and scattered notes.</p>
+          <p>The signal is in there: objections, unmet jobs, surprise use cases. But it's buried across recordings and scattered notes.</p>
         </blockquote>
 
         <h2>Why insight podcasts</h2>
