--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         software developer. i design infrastructure, ship ai features, and keep 
         things running. currently founding engineer at 
         <a href="https://retellio.com">retellio</a>, where i built everything 
-        from the ground up—aws, ci/cd, the llm pipeline, all of it. before that, 
+        from the ground up: aws, ci/cd, the llm pipeline, all of it. before that, 
         i helped build nasdaq's first genai product, now used by 2,000+ institutions.
       </p>
 
@@ -124,7 +124,7 @@
             <span class="role">Senior Software Developer at Nasdaq</span
             ><span class="dates">Jan 2024 – Jul 2024</span>
             <div class="summary">
-              helped build nasdaq's first <span class="hl">genai product</span>—an 
+              helped build nasdaq's first <span class="hl">genai product</span>, an 
               entity research copilot. owned retrieval and evaluation modules, 
               deployed on <span class="hl">aws/terraform</span>. now used by 
               2,000+ financial institutions.
